# new_planning_framework

./: .gitignore
autoware_dummy_trajectory_publisher/: CMakeLists.txt  README.md  package.xml
autoware_dummy_trajectory_publisher/config/: dummy_trajectory_publisher.param.yaml
autoware_dummy_trajectory_publisher/launch/: dummy_trajectory_publisher.launch.xml
autoware_dummy_trajectory_publisher/param/: dummy_trajectory_publisher_param.yaml  parameter_struct.yaml
autoware_dummy_trajectory_publisher/src/: node.cpp  node.hpp
autoware_feasible_trajectory_filter/: CMakeLists.txt  README.md  package.xml
autoware_feasible_trajectory_filter/config/: feasible_trajectory_filter.param.yaml
autoware_feasible_trajectory_filter/launch/: feasible_trajectory_filter.launch.xml
autoware_feasible_trajectory_filter/param/: parameter_struct.yaml
autoware_feasible_trajectory_filter/src/: node.cpp  node.hpp  utils.cpp  utils.hpp
autoware_feasible_trajectory_filter/test/: test_util.cpp
autoware_new_planning_framework/: CMakeLists.txt  package.xml
autoware_new_planning_launch/: CMakeLists.txt  package.xml
autoware_new_planning_launch/launch/: autoware_new_planning.launch.xml  generator.launch.xml  hierarchy_planning.xml  new_planning.launch.xml  planning_simulator.launch.xml  sampling_base_planner.launch.xml  selector.launch.xml  temp_autoware_selector.launch.xml
autoware_new_planning_launch/rviz/: autoware.rviz
autoware_new_planning_msgs/: CMakeLists.txt  package.xml
autoware_new_planning_msgs/msg/: Score.msg  ScoreDebug.msg  Trajectories.msg  TrajectoriesDebug.msg  TrajectoryDisplacementError.msg  TrajectoryPoint.msg  TrajectorySafetyMetrics.msg
autoware_new_planning_msgs_converter/: CMakeLists.txt  README.md  package.xml
autoware_new_planning_msgs_converter/src/: trajectory_to_trajectories.cpp  trajectory_to_trajectories.hpp
autoware_new_planning_rviz_plugin/: CMakeLists.txt  README.md  package.xml
autoware_new_planning_rviz_plugin/include/autoware_new_planning_rviz_plugin/trajectories/: display.hpp
autoware_new_planning_rviz_plugin/plugins/: plugin_description.xml
autoware_new_planning_rviz_plugin/src/trajectories/: display.cpp
autoware_new_trajectory_format_publisher/: CMakeLists.txt  package.xml
autoware_new_trajectory_format_publisher/src/: node.cpp  node.hpp
autoware_offline_evaluation_tools/: CMakeLists.txt  README.md  package.xml
autoware_offline_evaluation_tools/config/: offline_evaluation.param.yaml
autoware_offline_evaluation_tools/include/autoware/offline_evaluation_tools/: data_structs.hpp  utils.hpp
autoware_offline_evaluation_tools/launch/: offline_evaluator.launch.xml
autoware_offline_evaluation_tools/rviz/: autoware.rviz
autoware_offline_evaluation_tools/scripts/: dataset.py  main.py  multi_loss.py  trained_model_weights.pth  trajectory_selector.py  utils.py
autoware_offline_evaluation_tools/src/: bag_handler.cpp  bag_handler.hpp  closed_loop_evaluator.cpp  closed_loop_evaluator.hpp  data_structs.cpp  data_structs.hpp  evaluation.cpp  evaluation.hpp  node.cpp  node.hpp  open_loop_evaluator.cpp  open_loop_evaluator.hpp  structs.hpp  type_alias.hpp  utils.cpp  utils.hpp
autoware_offline_evaluation_tools/test/: test_bag_handler.cpp  test_displacement_errors.cpp  test_ground_truth_generation.cpp  test_replay_evaluation.cpp
autoware_trajectory_adaptor/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_adaptor/launch/: trajectory_adaptor.launch.xml
autoware_trajectory_adaptor/src/: node.cpp  node.hpp
autoware_trajectory_concatenater/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_concatenater/config/: trajectory_concatenater.param.yaml
autoware_trajectory_concatenater/launch/: trajectory_concatenater.launch.xml
autoware_trajectory_concatenater/param/: trajectory_concatenater_param.yaml
autoware_trajectory_concatenater/src/: node.cpp  node.hpp
autoware_trajectory_concatenator/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_concatenator/config/: concatenator.param.yaml
autoware_trajectory_concatenator/launch/: trajectory_concatenator.launch.xml
autoware_trajectory_concatenator/param/: parameter_struct.yaml
autoware_trajectory_concatenator/src/: node.cpp  node.hpp  structs.hpp
autoware_trajectory_evaluator/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_evaluator/src/: evaluation.cpp  utils.cpp
autoware_trajectory_filter_interface/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_filter_interface/src/: interface.cpp
autoware_trajectory_metrics/: CMakeLists.txt  README.md  package.xml  plugins.xml
autoware_trajectory_metrics/include/autoware/trajectory_metrics/: metrics.hpp
autoware_trajectory_metrics/src/: metrics.cpp  utils.cpp  utils.hpp
autoware_trajectory_metrics/test/: test_utils.cpp
autoware_trajectory_ranker/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_ranker/config/: evaluation.param.yaml  trajectory_ranker.param.yaml
autoware_trajectory_ranker/launch/: trajectory_ranker.launch.xml
autoware_trajectory_ranker/param/: parameter_struct.yaml  trajectory_ranker_param.yaml
autoware_trajectory_ranker/src/: node.cpp  node.hpp  type_alias.hpp  utils.cpp  utils.hpp
autoware_trajectory_ranker/test/: test_ranker.cpp
autoware_trajectory_selector_common/: CMakeLists.txt  README.md  package.xml
autoware_trajectory_selector_common/include/autoware/trajectory_selector_common/: data_interface.hpp  data_structs.hpp  evaluation.hpp  interface.hpp  metrics_interface.hpp  structs.hpp  type_alias.hpp  utils.hpp
autoware_trajectory_selector_common/include/autoware/trajectory_selector_common/interface/: data_interface.hpp  metrics_interface.hpp  node_interface.hpp
autoware_trajectory_selector_common/src/: data_interface.cpp  evaluation.cpp  utils.cpp
autoware_trajectory_selector_common/test/: test_utils.cpp
autoware_valid_trajectory_filter/: CMakeLists.txt  README.md  package.xml
new_autoware_planning_msgs/: CMakeLists.txt  package.xml
new_planning_framework/: CMakeLists.txt  package.xml
(+14 files in other folders)
