<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_new_planning_launch</name>
  <version>0.1.0</version>
  <description>The autoware_new_planning_launch package</description>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>autoware_dummy_trajectory_publisher</exec_depend>
  <exec_depend>autoware_feasible_trajectory_filter</exec_depend>
  <exec_depend>autoware_new_planning_msgs_converter</exec_depend>
  <exec_depend>autoware_trajectory_adaptor</exec_depend>
  <exec_depend>autoware_trajectory_concatenator</exec_depend>
  <exec_depend>autoware_trajectory_ranker</exec_depend>
  <exec_depend>autoware_valid_trajectory_filter</exec_depend>
  <exec_depend>autoware_glog_component</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
