<?xml version="1.0"?>
<package format="3">
  <name>autoware_new_planning_msgs_converter</name>
  <version>0.1.0</version>
  <description>The autoware_new_planning_msgs_converter package</description>

  <maintainer email="satoshi.ota@tier4.jp">Satoshi OTA</maintainer>
  <maintainer email="shumpei.wakabayashi@tier4.jp">Shumpei Wakabayashi</maintainer>
  <maintainer email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</maintainer>
  <maintainer email="go.sakayori@tier4.jp">Go Sakayori</maintainer>

  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi OTA</author>
  <author email="go.sakayori@tier4.jp">Go Sakayori</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>autoware_motion_utils</depend>
  <depend>autoware_new_planning_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_planning_topic_converter</depend>
  <depend>autoware_utils_uuid</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
