<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_new_trajectory_format_publisher</name>
  <version>0.1.0</version>
  <description>Publishes trajectories that are implemented in the source code with the new message format</description>
  <maintainer email="go.sakayori@tier4.jp">gosakayori</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_new_planning_msgs</depend>
  <depend>autoware_planning_test_manager</depend>
  <depend>autoware_test_utils</depend>
  <depend>autoware_trajectory</depend>
  <depend>autoware_trajectory_selector_common</depend>
  <depend>autoware_utils</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
