<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_trajectory_adaptor</name>
  <version>0.1.0</version>
  <description>The autoware_trajectory_adaptor package</description>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <maintainer email="go.sakayori@tier4.jp">Go Sakayori</maintainer>
  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>
  <author email="go.sakayori@tier4.jp">Go Sakayori</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_new_planning_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_motion_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
